# FastKCF

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  cn_data.cpp  colorNames.hpp  create_videos.py  fastTracker.cpp  fastTracker.hpp  fastTrackerCUDA.cpp  fastTrackerCUDA.hpp  fastTrackerKCF.cpp  fastTrackerMP.cpp  fastTrackerMP.hpp  fastTrackerMPCUDA.cpp  fastTrackerMPCUDA.hpp  main.cpp  make_fftw.sh  make_wisdom.sh  measure.py  tracker.hpp  utils.hpp  wisdom
data/: GOT-10k_Test_000001.txt  GOT-10k_Test_000002.txt  GOT-10k_Test_000003.txt  GOT-10k_Test_000004.txt  GOT-10k_Test_000005.txt  GOT-10k_Test_000006.txt  GOT-10k_Test_000007.txt  GOT-10k_Test_000008.txt  GOT-10k_Test_000009.txt  GOT-10k_Test_000010.txt  GOT-10k_Test_000011.txt  GOT-10k_Test_000012.txt  GOT-10k_Test_000013.txt  GOT-10k_Test_000014.txt  GOT-10k_Test_000015.txt  GOT-10k_Test_000016.txt  GOT-10k_Test_000017.txt  GOT-10k_Test_000018.txt  GOT-10k_Test_000019.txt  GOT-10k_Test_000020.txt  GOT-10k_Test_000021.txt  GOT-10k_Test_000022.txt  GOT-10k_Test_000023.txt  GOT-10k_Test_000024.txt  GOT-10k_Test_000025.txt  GOT-10k_Test_000026.txt  GOT-10k_Test_000027.txt  GOT-10k_Test_000028.txt  GOT-10k_Test_000029.txt  GOT-10k_Test_000030.txt  GOT-10k_Test_000031.txt  GOT-10k_Test_000032.txt  GOT-10k_Test_000033.txt  GOT-10k_Test_000034.txt  GOT-10k_Test_000035.txt  GOT-10k_Test_000036.txt  GOT-10k_Test_000037.txt  GOT-10k_Test_000038.txt  GOT-10k_Test_000039.txt  GOT-10k_Test_000040.txt  (+140 more)
data/archive/: 100x100.txt  10x10.txt  110x110.txt  130x130.txt  150x150.txt  20x20.txt  230x230.txt  260x260.txt  270x270.txt  290x290.txt  300x300.txt  30x30.txt  350x350.txt  370x370.txt  390x390.txt  400x400.txt  40x40.txt  430x430.txt  450x450.txt  480x480.txt  50x50.txt  510x510.txt  520x520.txt  530x530.txt  580x580.txt  590x590.txt  610x610.txt  670x670.txt  680x680.txt  70x70.txt  80x80.txt
data/benchmarking/: 120x120.txt  140x140.txt  160x160.txt  170x170.txt  180x180.txt  190x190.txt  200x200.txt  20x20.txt  210x210.txt  220x220.txt  240x240.txt  250x250.txt  280x280.txt  310x310.txt  320x320.txt  330x330.txt  340x340.txt  360x360.txt  380x380.txt  410x410.txt  420x420.txt  440x440.txt  460x460.txt  470x470.txt  490x490.txt  500x500.txt  540x540.txt  550x550.txt  560x560.txt  570x570.txt  600x600.txt  60x60.txt  630x630.txt  640x640.txt  650x650.txt  660x660.txt  690x690.txt  90x90.txt
data/got10k/: GOT-10k_Test_000001.txt  GOT-10k_Test_000002.txt  GOT-10k_Test_000003.txt  GOT-10k_Test_000004.txt  GOT-10k_Test_000005.txt  GOT-10k_Test_000006.txt  GOT-10k_Test_000007.txt  GOT-10k_Test_000008.txt  GOT-10k_Test_000009.txt  GOT-10k_Test_000010.txt  GOT-10k_Test_000011.txt  GOT-10k_Test_000012.txt  GOT-10k_Test_000013.txt  GOT-10k_Test_000014.txt  GOT-10k_Test_000015.txt  GOT-10k_Test_000016.txt  GOT-10k_Test_000017.txt  GOT-10k_Test_000018.txt  GOT-10k_Test_000019.txt  GOT-10k_Test_000020.txt  GOT-10k_Test_000021.txt  GOT-10k_Test_000022.txt  GOT-10k_Test_000023.txt  GOT-10k_Test_000024.txt  GOT-10k_Test_000025.txt  GOT-10k_Test_000026.txt  GOT-10k_Test_000027.txt  GOT-10k_Test_000028.txt  (+153 more)
scripts/: download_install_opencv.sh  download_opencv.sh  install_cudnn.sh  install_opencv.sh  make_test_image.py
src/: fastTracker.cpp  fastTracker.hpp  fastTrackerCUDA.cpp  fastTrackerCUDA.hpp  fastTrackerFFTW.cpp  fastTrackerFFTW.hpp  fastTrackerMP.cpp  fastTrackerMP.hpp  fastTrackerMPCUDA.cpp  fastTrackerMPCUDA.hpp
test/: create_dirs.py  create_videos.py
(+360 files in other folders)
